k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nopcommerce
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nopcommerce-pod
  namespace: nopcommerce
  labels:
    app: nopcommerce-pod
spec:
  selector:
    matchLabels:
      app: nopcommerce-pod
  template:
    metadata:
      labels:
        app: nopcommerce-pod
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: nopcommerce-appdata-pvc
      - name: wwwroot
        persistentVolumeClaim:
          claimName: nopcommerce-wwwroot-pvc
      - name: plugins
        persistentVolumeClaim:
          claimName: nopcommerce-plugins-pvc
      - name: themes
        persistentVolumeClaim:
          claimName: nopcommerce-themes-pvc
      containers:
      - name: nopcommerce
        image: gabrielfreiredev/nopcommerce:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: appdata
          mountPath: /app/App_Data
        - name: wwwroot
          mountPath: /app/wwwroot
        - name: plugins
          mountPath: /app/Plugins
        - name: themes
          mountPath: /app/Themes
        ports:
        - containerPort: 80
      terminationGracePeriodSeconds: 180
  minReadySeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
---
apiVersion: v1
kind: Service
metadata:
  name: nopcommerce-service
  namespace: nopcommerce
spec:
  selector:
    app: nopcommerce-pod
  ports:
  - port: 4480
    name: "http-4480"
    protocol: TCP
    targetPort: 80
  type: NodePort
